--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <base target="_top">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    
     <script>
       function isInstagramBrowser() {
         const userAgent = navigator.userAgent || navigator.vendor || window.opera;
@@ -815,4 +817,5 @@
       </div>
     </div>
   </body>
+
 </html>
