--- a/upload.html
+++ b/upload.html
@@ -3,17 +3,35 @@
   <head>
     <script>
       function uploadReceipt() {
-        const file = document.getElementById('file').files[0];
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          const base64 = e.target.result.split(',')[1];
-          const groupId = localStorage.getItem('groupId');
-          google.script.run.withSuccessHandler(() => {
-            alert('Receipt uploaded successfully!');
-          }).uploadFile(base64, groupId + "_Receipt.png", groupId);
-        };
-        reader.readAsDataURL(file);
-      }
+  const file = document.getElementById('file').files[0];
+  if (!file) {
+    alert('Seleziona un file!');
+    return;
+  }
+  const reader = new FileReader();
+  reader.onload = function(e) {
+    const base64 = e.target.result.split(',')[1];
+    const groupId = localStorage.getItem('groupId');
+    fetch('https://script.google.com/macros/s/AKfycbwrFZ1yfg0WpbY9cVhQaT6DoUsvZKxwYCkKt-LlW0vgEZXetFQQQmqd5tNUTx8ZSLyW/exec', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        action: 'uploadFile',
+        base64Data: base64,
+        fileName: groupId + "_Receipt.png",
+        groupId: groupId
+      })
+    })
+    .then(response => response.text())
+    .then(result => {
+      alert('Ricevuta caricata con successo!');
+    })
+    .catch(error => {
+      alert('Errore durante il caricamento: ' + error);
+    });
+  };
+  reader.readAsDataURL(file);
+}
     </script>
   </head>
   <body>
